[package]
name = "uwp_helper"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies.windows]
version = "0.58.0"
git = "https://github.com/microsoft/windows-rs.git"
rev = "0.60.0"
features = ["System", "Foundation", "Win32_Foundation", "Security_Credentials", "Services_Store", "Foundation_Collections", "Storage"]

[dependencies.tokio]
version = "1.40.0"
features = ["macros", "rt-multi-thread"]

[build-dependencies.cbindgen]
version = "0.27.0"
default-features = false

[dependencies]
log = "0.4.22"
