[package]
name = "uwp_helper"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies.windows]
version = "^0.62.0"
features = ["System", "Foundation", "Win32_Foundation", "Security_Credentials", "Services_Store", "Foundation_Collections", "Storage", "Storage_Search", "Storage_FileProperties"]

[dependencies.tokio]
version = "1.47.1"
features = ["macros", "rt-multi-thread"]

[build-dependencies.cbindgen]
version = "0.29.0"
default-features = false

[dependencies]
windows-future = "0.3"
log = "0.4.27"
